# CustomiseAIChat

./: .env.example  .gitignore  CMakeLists.txt  PLAN.md  README-GO.md  README.md  TESTING.md  go.mod  openapi.yaml  重构方案.md
.qoder/plans/: Go_Agent_Platform_重构方案_7324e0be.md
01/: client  tcpepoll.cpp
02/: client
03/: InetAddress.cpp  InetAddress.h  client  makefile  tcpepoll.cpp
04/: tcpepoll.cpp
05/: Epoll.cpp  client  tcpepoll  tcpepoll.cpp
06/: Channel.cpp  Channel.h  makefile  tcpepoll.cpp
07/: Channel.cpp  client  client.cpp  tcpepoll  tcpepoll.cpp
08/: Channel.cpp  Epoll.cpp  client  tcpepoll  tcpepoll.cpp
09/: Channel.h  Epoll.cpp  client  makefile  tcpepoll
11/: TcpServer.cpp  TcpServer.h  client  makefile  tcpepoll
12/: Channel.cpp  Socket.cpp  client  makefile
13/: makefile
14/: client  tcpepoll  tcpepoll.cpp
15/: Connection.cpp  tcpepoll
16/: Socket.cpp  tcpepoll
17/: Socket.h
18/: Acceptor.h  TcpServer.cpp
19/: Connection.cpp  Connection.h  makefile  tcpepoll.cpp
20/: Channel.cpp  EventLoop.h  TcpServer.cpp  client  client.cpp  tcpepoll  tcpepoll.cpp
21/: Connection.h  Epoll.h  EventLoop.h  tcpepoll  tcpepoll.cpp
22/: Channel.cpp  Epoll.cpp  client  tcpepoll.cpp
23/: EchoServer.cpp  EchoServer.h  InetAddress.h  TcpServer.cpp  TcpServer.h  client
24/: EventLoop.cpp  tcpepoll  tcpepoll.cpp
25/: Buffer.h  TcpServer.h  ThreadPool.cpp  makefile  tcpepoll.cpp
26/: ThreadPool.cpp
27/: EchoServer.cpp  EventLoop.h  tcpepoll  tcpepoll.cpp
28/: EchoServer.h  EventLoop.cpp  Socket.h  ThreadPool.h
29/: Buffer.cpp  Channel.h  Connection.h  TcpServer.h  ThreadPool.cpp  client  tcpepoll.cpp
30/: Acceptor.h  Buffer.cpp  EchoServer.cpp  EventLoop.h  TcpServer.cpp  TcpServer.h  tcpepoll.cpp
31/: Connection.h  Epoll.cpp  client.cpp  makefile  tcpepoll.cpp
32/: Connection.cpp  Epoll.cpp  EventLoop.cpp  EventLoop.h  client.cpp
33/: EchoServer.h  ThreadPool.h  tcpepoll.cpp
34/: Acceptor.cpp  EventLoop.h  TcpServer.cpp  tcpepoll  tcpepoll.cpp
35/: Buffer.cpp  Connection.cpp  TcpServer.cpp  client.cpp  tcpepoll  tcpepoll.cpp
36/: Buffer.h  EchoServer.cpp  Timestamp.h  client.cpp  makefile
37/: Channel.h  client.cpp  tcpepoll  tcpepoll.cpp
38/: BankServer.cpp  Buffer.h  EchoServer.cpp  ThreadPool.h  tcpepoll
CustomiseAIChat/: AIServer.cpp  AIServer.h  Client.cpp  Server
cmd/api/: README.md  main.go
cmd/worker/: README.md  main.go
data/: .env.example  server.conf
deployments/docker-compose/: docker-compose.yml
docs/: 阶段0测试验收清单.md
docs/adr/: 001-modular-monolith.md
internal/app/: README.md  app.go  app_test.go  catalog.go  model.go  skill.go  store.go
internal/config/: README.md  config.go
internal/domain/: README.md
internal/platform/: README.md
internal/transport/: README.md
migrations/: 001_init.sql  002_skill_and_model_registry.sql  003_platform_catalog_and_chat.sql  README.md
net/: BankServer.h  TcpServer.h  bankclient  bankclient.cpp  bankserver  client  tcpepoll.cpp
python/: ai_service.py
python/templates/: chat_test.html
scripts/: build.ps1  common.ps1  dev.ps1  smoke.ps1  test-all.ps1  test-integration.ps1  test-postgres.ps1  test-unit.ps1  test.ps1  worker.ps1
src-old/net/: CMakeLists.txt  Channel.cpp  Connection.cpp  Connector.cpp  Connector.h  Epoll.cpp  EventLoop.cpp  EventLoop.h  InetAddress.h  Socket.cpp  TcpClient.cpp  TcpClient.h  TcpServer.cpp  ThreadPool.cpp
src-old/server/: ChatServer.cpp  HttpClient.cpp  main.cpp
src-old/ui/: CMakeLists.txt  main.cpp  mainwindow.cpp
src-old/ui/network/: NetworkClient.cpp  NetworkClient.h
src-old/web/: index.html
src/CustomiseAIChat/: AIServer.cpp  AIServer.h  Client  Client.cpp  Makefile  Server  Server.cpp
src/db/: aichat.db  chat.db  database.cpp  database.h
src/net/: BankServer.cpp  Connection.cpp  README.md  echoclient.cpp  makefile  tmp1.sh
src/server/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  HttpClient.h  main.cpp
src/server/config/: ServerConfig.cpp  ServerConfig.h
src/server/db/: Database.cpp  Database.h
src/server/model/: Conversation.h  Message.h  Persona.h
src/server/service/: AIService.cpp  AIService.h  ChatService.cpp  ChatService.h  UserService.cpp
tests/: README.md
(+232 files in other folders)
